--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pandas = "^2.1.4"
 xgboost = "^2.0.3"
 jupyter = "^1.0.0"
 mlflow = "^2.9.2"
+shap = "^0.44.1"
+lime = "^0.2.0.1"
+imblearn = "^0.0"
 
 
 [tool.poetry.group.dev.dependencies]
